fix: Correct mobile keyboard covering list editbox

--- a/src/styles/EditList.scss
+++ b/src/styles/EditList.scss
@@ -14,6 +14,8 @@ $selected-color: #3F88C5;
   min-height: 100vh;
   .container-edit__header {
     margin: 48px auto 0;
+    position: sticky;
+    top: 48px;
     h1 {
       font-size: 20px;
     }
@@ -138,8 +140,17 @@ $selected-color: #3F88C5;
   background: #E0EFFA;
 }
 
+/*=== media queries ===*/
+/* Less than 540 tall*/
+@media screen and (max-height: 540px) {
+  .editbox {
+    height: 44vh;
+  }
+}
+
 @media(hover: hover) and (pointer: fine) {
   .btn-edit:hover {
     box-shadow: 0 3px 4px 1px rgba(0, 0, 0, 0.3);
   }
 }
+
